add cnmap.rda to A03-06

--- a/A01 R Basics/A01_02_type.html
+++ b/A01 R Basics/A01_02_type.html
@@ -809,7 +809,7 @@ r4   4 FALSE</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
