--- a/A01 R Basics/A01_03_calc.html
+++ b/A01 R Basics/A01_03_calc.html
@@ -754,7 +754,7 @@ Error: object &#39;z&#39; not found
 
 <br/>Thank you!
 
-</p></article></slide>
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
