--- a/A02 Data Manipulation/A02_04_apply_family.html
+++ b/A02 Data Manipulation/A02_04_apply_family.html
@@ -514,7 +514,9 @@ beta :  num [1:7] 0.0498 0.1353 0.3679 1 2.7183 ...
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
