--- a/A03 Visualization/A03_01_graphicDevice.html
+++ b/A03 Visualization/A03_01_graphicDevice.html
@@ -325,8 +325,9 @@ ggplot(state, aes(Income, Life.Exp)) + geom_point() + facet_grid(.~region)</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
-
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
   <slide class="backdrop"></slide>
 
