--- a/A03 Visualization/A03_02_visualDesign.html
+++ b/A03 Visualization/A03_02_visualDesign.html
@@ -767,7 +767,9 @@ image(volcano, col = pal(20))</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
