--- a/A04 Basic Analysis/A04_02_quantitative.html
+++ b/A04 Basic Analysis/A04_02_quantitative.html
@@ -745,7 +745,9 @@ Kruskal-Wallis chi-squared = 29.267, df = 4, p-value = 6.901e-06</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
