--- a/A04 Basic Analysis/A04_04_exploratory1.html
+++ b/A04 Basic Analysis/A04_04_exploratory1.html
@@ -623,7 +623,9 @@ par(op)</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
