--- a/A04 Basic Analysis/A04_06_timeseries.html
+++ b/A04 Basic Analysis/A04_06_timeseries.html
@@ -763,7 +763,9 @@ X-squared = 12.679, df = 20, p-value = 0.8907</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
