--- a/A01 R Basics/A01_01_intro.html
+++ b/A01 R Basics/A01_01_intro.html
@@ -55,10 +55,14 @@
   <script src="../libs/ioslides-13.5.1/js/hammer.js"></script>
   <script src="../libs/ioslides-13.5.1/js/slide-controller.js"></script>
   <script src="../libs/ioslides-13.5.1/js/slide-deck.js"></script>
-  <script src="../libs/htmlwidgets-0.8/htmlwidgets.js"></script>
-  <link href="../libs/plotlyjs-1.16.3/plotly-htmlwidgets.css" rel="stylesheet" />
-  <script src="../libs/plotlyjs-1.16.3/plotly-latest.min.js"></script>
-  <script src="../libs/plotly-binding-4.5.6/plotly.js"></script>
+  <script src="../libs/htmlwidgets-0.9/htmlwidgets.js"></script>
+  <script src="../libs/plotly-binding-4.7.1/plotly.js"></script>
+  <script src="../libs/typedarray-0.1/typedarray.min.js"></script>
+  <script src="../libs/jquery-1.11.3/jquery.min.js"></script>
+  <link href="../libs/crosstalk-1.0.0/css/crosstalk.css" rel="stylesheet" />
+  <script src="../libs/crosstalk-1.0.0/js/crosstalk.min.js"></script>
+  <link href="../libs/plotlyjs-1.29.2/plotly-htmlwidgets.css" rel="stylesheet" />
+  <script src="../libs/plotlyjs-1.29.2/plotly-latest.min.js"></script>
 
   <style type="text/css">
 
@@ -118,7 +122,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2017-06-19 20:44:34</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2017-10-15 19:58:13</p>
           </hgroup>
   </slide>
 
@@ -137,19 +141,16 @@
 
 <p>一种<ora>开源</ora>的<ora>解释型统计分析</ora>程序语言/<a href='http://www.r-project.org' title=''>软件工具包</a></p>
 
-<div class="columns-2">
+<div class="col-2L">
 <h3>历史</h3>
 
 <ul>
 <li>前身是S (John Chambers, et al. Bell Lab, 1976) &#8211;&gt; S-Plus</li>
 <li>由<strong>R</strong>oss Ihaka &amp; <strong>R</strong>obert Gentleman开发(U Aucland, 1990s)</li>
 <li>R Core Team成立，维护R核心代码(1997)</li>
-</ul>
+</ul></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h3>现状</h3>
 
 <ul>
@@ -163,7 +164,7 @@
 
 </article></slide><slide class=''><hgroup><h2>R有何用？</h2></hgroup><article  id="r" class="smaller">
 
-<div class="columns-2">
+<div class="col-2L">
 <h3>数据科学</h3>
 
 <ul>
@@ -187,12 +188,9 @@
 <li>统计推断</li>
 <li>挖掘预测</li>
 </ul></li>
-</ul>
+</ul></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <ul>
 <li>可视化
 
@@ -217,7 +215,7 @@
 <p>The best thing about R is that it was developed by <strong>statisticians</strong>. The worst thing about R is that it was developed by <strong>statisticians</strong>. <br> &#8211; Bo Cowgill, <em>Google</em></p>
 </blockquote></section></aside>
 
-<div class="columns-2">
+<div class="col-2L">
 <h3><gre>优点</gre></h3>
 
 <ul>
@@ -239,12 +237,9 @@
 <li>背靠附加包，代码产出率高</li>
 <li>胶水语言，便于混搭其他工具</li>
 </ul></li>
-</ul>
+</ul></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h3><crb>缺点</crb></h3>
 
 <ul>
@@ -269,7 +264,7 @@
 
 </article></slide><slide class=''><hgroup><h2>R适合谁学？</h2></hgroup><article  id="r">
 
-<div class="columns-2">
+<div class="col-2L">
 <h3>这些人适合学R</h3>
 
 <ul>
@@ -287,12 +282,9 @@
 <li>对数据/算法/结构有兴趣</li>
 <li>有一点黑客精神</li>
 </ul></li>
-</ul>
+</ul></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h3>你可能关心的问题</h3>
 
 <ul>
@@ -320,7 +312,7 @@
 
 </article></slide><slide class=''><hgroup><h2>30%的时间 - 书本和课堂</h2></hgroup><article  id="---" class="smaller">
 
-<div class="columns-2">
+<div class="col-2L">
 <h3>书本(供参考)</h3>
 
 <ul>
@@ -343,8 +335,9 @@
 <li>高级R语言编程指南 (<em>H. Wickham</em>)</li>
 <li>Software for data analysis programming with R (<em>J. Chambers</em>)</li>
 </ul></li>
-</ul>
+</ul></div>
 
+<div class="col-2R">
 <h3>在线课堂</h3>
 
 <ul>
@@ -364,7 +357,7 @@
 
 </article></slide><slide class=''><hgroup><h2>70%的时间 - 社区和实战</h2></hgroup><article  id="---">
 
-<div class="columns-2">
+<div class="col-2L">
 <h3>社区</h3>
 
 <ul>
@@ -385,12 +378,9 @@
 <ul>
 <li><a href='http://www.kaggle.com' title=''>Kaggle</a>, <a href='https://projecteuler.net' title=''>Euler Project</a></li>
 </ul></li>
-</ul>
+</ul></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h3>实战</h3>
 
 <ul>
@@ -470,7 +460,7 @@
 
 </article></slide><slide class=''><hgroup><h2>一些初始配置 (RStudio)</h2></hgroup><article  id="-rstudio" class="smaller">
 
-<div class="columns-2">
+<div class="col-2L">
 <h3>全局设置</h3>
 
 <p>(Tools -&gt; Global Options)</p>
@@ -489,12 +479,9 @@
 <li>修改CRAN Mirror</li>
 <li>修改外观主题</li>
 </ul></li>
-</ul>
+</ul></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h3>环境配置</h3>
 
 <p>(Control PanelControl Panel Items-&gt; Change settings -&gt; Advanced -&gt; Environment variables)</p>
@@ -534,7 +521,7 @@
 
 <h3>推荐一些常用包</h3>
 
-<div class="columns-2">
+<div class="col-2L">
 <ul>
 <li>数据抽取
 
@@ -556,12 +543,9 @@
 <li>金融/时序: <code>quantmod</code>, <code>xts</code>, <code>zoo</code></li>
 <li>地理: <code>sp</code>, <code>maps</code>, <code>maptools</code>, <code>ggmap</code></li>
 </ul></li>
-</ul>
+</ul></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <ul>
 <li>数据挖掘
 
@@ -589,18 +573,15 @@
 
 <p>通过Rcmdr或rattle包调用<code>tcltk</code>库，驱动图形界面，进行整理、分析、挖掘</p>
 
-<div class="columns-2">
+<div class="col-2L">
 <h4>R Commander (经典分析利器)</h4>
 
 <pre class = 'prettyprint lang-r'>library(Rcmdr)  ## 加载Rcmdr包
 Commander()  ## Rcmdr主函数</pre>
 
-<img src='A01_01_intro_files/figure-html/rcmdr.png' title='fig:'/>
+<img src='A01_01_intro_files/figure-html/rcmdr.png' title='fig:'/></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h4>rattle (整合数据挖掘功能)</h4>
 
 <pre class = 'prettyprint lang-r'>library(rattle)  ## 加载rattle包
@@ -610,7 +591,7 @@ rattle()  ## rattle主函数</pre>
 
 </article></slide><slide class=''><hgroup><h2>交互命令行</h2></hgroup><article  class="smaller">
 
-<div class="columns-2">
+<div class="col-2L">
 <h4>用法</h4>
 
 <ul>
@@ -635,12 +616,9 @@ rattle()  ## rattle主函数</pre>
 <td align="left">便捷</td>
 <td align="left">无法复用</td>
 </tr>
-</table>
+</table></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h4>例子</h4>
 
 <pre class = 'prettyprint lang-r'>1:4 + 1:4</pre>
@@ -651,8 +629,8 @@ rattle()  ## rattle主函数</pre>
 plot_ly(cars, x=~speed, y=~dist) %&gt;% add_markers()</pre>
 
 <div class="figure">
-<div id="htmlwidget-d03b77056b124e731c33" style="width:432px;height:240px;" class="plotly html-widget"></div>
-<script type="application/json" data-for="htmlwidget-d03b77056b124e731c33">{"x":{"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"xaxis":{"domain":[0,1],"title":"speed"},"yaxis":{"domain":[0,1],"title":"dist"},"hovermode":"closest"},"source":"A","config":{"modeBarButtonsToAdd":[{"name":"Collaborate","icon":{"width":1000,"ascent":500,"descent":-50,"path":"M487 375c7-10 9-23 5-36l-79-259c-3-12-11-23-22-31-11-8-22-12-35-12l-263 0c-15 0-29 5-43 15-13 10-23 23-28 37-5 13-5 25-1 37 0 0 0 3 1 7 1 5 1 8 1 11 0 2 0 4-1 6 0 3-1 5-1 6 1 2 2 4 3 6 1 2 2 4 4 6 2 3 4 5 5 7 5 7 9 16 13 26 4 10 7 19 9 26 0 2 0 5 0 9-1 4-1 6 0 8 0 2 2 5 4 8 3 3 5 5 5 7 4 6 8 15 12 26 4 11 7 19 7 26 1 1 0 4 0 9-1 4-1 7 0 8 1 2 3 5 6 8 4 4 6 6 6 7 4 5 8 13 13 24 4 11 7 20 7 28 1 1 0 4 0 7-1 3-1 6-1 7 0 2 1 4 3 6 1 1 3 4 5 6 2 3 3 5 5 6 1 2 3 5 4 9 2 3 3 7 5 10 1 3 2 6 4 10 2 4 4 7 6 9 2 3 4 5 7 7 3 2 7 3 11 3 3 0 8 0 13-1l0-1c7 2 12 2 14 2l218 0c14 0 25-5 32-16 8-10 10-23 6-37l-79-259c-7-22-13-37-20-43-7-7-19-10-37-10l-248 0c-5 0-9-2-11-5-2-3-2-7 0-12 4-13 18-20 41-20l264 0c5 0 10 2 16 5 5 3 8 6 10 11l85 282c2 5 2 10 2 17 7-3 13-7 17-13z m-304 0c-1-3-1-5 0-7 1-1 3-2 6-2l174 0c2 0 4 1 7 2 2 2 4 4 5 7l6 18c0 3 0 5-1 7-1 1-3 2-6 2l-173 0c-3 0-5-1-8-2-2-2-4-4-4-7z m-24-73c-1-3-1-5 0-7 2-2 3-2 6-2l174 0c2 0 5 0 7 2 3 2 4 4 5 7l6 18c1 2 0 5-1 6-1 2-3 3-5 3l-174 0c-3 0-5-1-7-3-3-1-4-4-5-6z"},"click":"function(gd) { \n        // is this being viewed in RStudio?\n        if (location.search == '?viewer_pane=1') {\n          alert('To learn about plotly for collaboration, visit:\\n https://cpsievert.github.io/plotly_book/plot-ly-for-collaboration.html');\n        } else {\n          window.open('https://cpsievert.github.io/plotly_book/plot-ly-for-collaboration.html', '_blank');\n        }\n      }"}],"modeBarButtonsToRemove":["sendDataToCloud"]},"data":[{"x":[4,4,7,7,8,9,10,10,10,11,11,12,12,12,12,13,13,13,13,14,14,14,14,15,15,15,16,16,17,17,17,18,18,18,18,19,19,19,20,20,20,20,20,22,23,24,24,24,24,25],"y":[2,10,4,22,16,10,18,26,34,17,28,14,20,24,28,26,34,34,46,26,36,60,80,20,26,54,32,40,32,40,50,42,56,76,84,36,46,68,32,48,52,56,64,66,54,70,92,93,120,85],"type":"scatter","mode":"markers","marker":{"fillcolor":"rgba(31,119,180,1)","color":"rgba(31,119,180,1)","line":{"color":"transparent"}},"xaxis":"x","yaxis":"y"}],"base_url":"https://plot.ly"},"evals":["config.modeBarButtonsToAdd.0.click"],"jsHooks":[]}</script>
+<div id="511dc504e05" style="width:432px;height:240px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="511dc504e05">{"x":{"visdat":{"511d7a44b3b1":["function () ","plotlyVisDat"]},"cur_data":"511d7a44b3b1","attrs":{"511d7a44b3b1":{"x":{},"y":{},"alpha":1,"sizes":[10,100],"type":"scatter","mode":"markers"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"xaxis":{"domain":[0,1],"title":"speed"},"yaxis":{"domain":[0,1],"title":"dist"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":[{"name":"Collaborate","icon":{"width":1000,"ascent":500,"descent":-50,"path":"M487 375c7-10 9-23 5-36l-79-259c-3-12-11-23-22-31-11-8-22-12-35-12l-263 0c-15 0-29 5-43 15-13 10-23 23-28 37-5 13-5 25-1 37 0 0 0 3 1 7 1 5 1 8 1 11 0 2 0 4-1 6 0 3-1 5-1 6 1 2 2 4 3 6 1 2 2 4 4 6 2 3 4 5 5 7 5 7 9 16 13 26 4 10 7 19 9 26 0 2 0 5 0 9-1 4-1 6 0 8 0 2 2 5 4 8 3 3 5 5 5 7 4 6 8 15 12 26 4 11 7 19 7 26 1 1 0 4 0 9-1 4-1 7 0 8 1 2 3 5 6 8 4 4 6 6 6 7 4 5 8 13 13 24 4 11 7 20 7 28 1 1 0 4 0 7-1 3-1 6-1 7 0 2 1 4 3 6 1 1 3 4 5 6 2 3 3 5 5 6 1 2 3 5 4 9 2 3 3 7 5 10 1 3 2 6 4 10 2 4 4 7 6 9 2 3 4 5 7 7 3 2 7 3 11 3 3 0 8 0 13-1l0-1c7 2 12 2 14 2l218 0c14 0 25-5 32-16 8-10 10-23 6-37l-79-259c-7-22-13-37-20-43-7-7-19-10-37-10l-248 0c-5 0-9-2-11-5-2-3-2-7 0-12 4-13 18-20 41-20l264 0c5 0 10 2 16 5 5 3 8 6 10 11l85 282c2 5 2 10 2 17 7-3 13-7 17-13z m-304 0c-1-3-1-5 0-7 1-1 3-2 6-2l174 0c2 0 4 1 7 2 2 2 4 4 5 7l6 18c0 3 0 5-1 7-1 1-3 2-6 2l-173 0c-3 0-5-1-8-2-2-2-4-4-4-7z m-24-73c-1-3-1-5 0-7 2-2 3-2 6-2l174 0c2 0 5 0 7 2 3 2 4 4 5 7l6 18c1 2 0 5-1 6-1 2-3 3-5 3l-174 0c-3 0-5-1-7-3-3-1-4-4-5-6z"},"click":"function(gd) { \n        // is this being viewed in RStudio?\n        if (location.search == '?viewer_pane=1') {\n          alert('To learn about plotly for collaboration, visit:\\n https://cpsievert.github.io/plotly_book/plot-ly-for-collaboration.html');\n        } else {\n          window.open('https://cpsievert.github.io/plotly_book/plot-ly-for-collaboration.html', '_blank');\n        }\n      }"}],"cloud":false},"data":[{"x":[4,4,7,7,8,9,10,10,10,11,11,12,12,12,12,13,13,13,13,14,14,14,14,15,15,15,16,16,17,17,17,18,18,18,18,19,19,19,20,20,20,20,20,22,23,24,24,24,24,25],"y":[2,10,4,22,16,10,18,26,34,17,28,14,20,24,28,26,34,34,46,26,36,60,80,20,26,54,32,40,32,40,50,42,56,76,84,36,46,68,32,48,52,56,64,66,54,70,92,93,120,85],"type":"scatter","mode":"markers","marker":{"fillcolor":"rgba(31,119,180,1)","color":"rgba(31,119,180,1)","line":{"color":"transparent"}},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.2,"selected":{"opacity":1}},"base_url":"https://plot.ly"},"evals":["config.modeBarButtonsToAdd.0.click"],"jsHooks":{"render":[{"code":"function(el, x) { var ctConfig = crosstalk.var('plotlyCrosstalkOpts').set({\"on\":\"plotly_click\",\"persistent\":false,\"dynamic\":false,\"selectize\":false,\"opacityDim\":0.2,\"selected\":{\"opacity\":1}}); }","data":null}]}}</script>
 
 <p class="caption">
 
@@ -662,7 +640,7 @@ scatter cars
 
 </article></slide><slide class=''><hgroup><h2>脚本</h2></hgroup><article  class="smaller">
 
-<div class="columns-2">
+<div class="col-2L">
 <h4>用法</h4>
 
 <ul>
@@ -688,12 +666,9 @@ scatter cars
 <td align="left">代码逻辑</td>
 <td align="left">结果欠结构</td>
 </tr>
-</table>
+</table></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h4>例子</h4>
 
 <p>保存一个<a href='A01_01_intro_files/file/intro.R' title=''>intro.R</a>脚本</p>
@@ -716,7 +691,7 @@ Rscript.exe intro.R
 
 </article></slide><slide class=''><hgroup><h2>可重复报告</h2></hgroup><article >
 
-<div class="columns-2">
+<div class="col-2L">
 <h4>用法</h4>
 
 <ul>
@@ -742,12 +717,9 @@ Rscript.exe intro.R
 <td align="left">文学化编程</td>
 <td align="left">需要一定的构思</td>
 </tr>
-</table>
+</table></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h4>例子</h4>
 
 <ul>
@@ -766,7 +738,7 @@ Rscript.exe intro.R
 
 </article></slide><slide class=''><hgroup><h2>入门仪式: Hello, world!</h2></hgroup><article  id="-hello-world" class="smaller">
 
-<div class="columns-2">
+<div class="col-2L">
 <h4>Java</h4>
 
 <pre class = 'prettyprint lang-java'>public class HelloWorld
@@ -785,12 +757,9 @@ Rscript.exe intro.R
     echo &quot;Hello, world!&quot;;
 ?&gt;  
 &lt;/body&gt;  
-&lt;/html&gt;</pre>
+&lt;/html&gt;</pre></div>
 
-<p class="forceBreak">
-
-</p>
-
+<div class="col-2R">
 <h4>JavaScript</h4>
 
 <pre class = 'prettyprint lang-javascript'>var sys = require(&quot;sys&quot;);
@@ -814,7 +783,9 @@ sys.puts(&quot;Hello, world!&quot;); </pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
@@ -826,7 +797,7 @@ sys.puts(&quot;Hello, world!&quot;); </pre>
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
