--- a/A01 R Basics/A01_05_style.html
+++ b/A01 R Basics/A01_05_style.html
@@ -507,7 +507,7 @@ hist(df$pctSpent,
 
 <br/>Thank you!
 
-</p></article></slide>
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
