--- a/A02 Data Manipulation/A02_02_io.html
+++ b/A02 Data Manipulation/A02_02_io.html
@@ -647,7 +647,9 @@ chr [1:104] &quot;&lt;!DOCTYPE html&gt;&lt;html id=\&quot;atomic\&quot; class=\&
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
