--- a/A02 Data Manipulation/A02_03_df_ops.html
+++ b/A02 Data Manipulation/A02_03_df_ops.html
@@ -620,7 +620,9 @@ setorderv(x, cols, order=1L, na.last=FALSE)</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
