--- a/A02 Data Manipulation/A02_05_df_shaping.html
+++ b/A02 Data Manipulation/A02_05_df_shaping.html
@@ -997,7 +997,9 @@ dim(flights)
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
