--- a/A02 Data Manipulation/A02_06_string_regex.html
+++ b/A02 Data Manipulation/A02_06_string_regex.html
@@ -765,7 +765,9 @@ abcdefghijklm
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
