--- a/A02 Data Manipulation/A02_07_date_time.html
+++ b/A02 Data Manipulation/A02_07_date_time.html
@@ -938,7 +938,9 @@ GMT
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
