--- a/A03 Visualization/A03_03_plotBase.html
+++ b/A03 Visualization/A03_03_plotBase.html
@@ -638,7 +638,7 @@ plot(x, y, xlab=substitute(bar(x) == k, list(k=mean(x))),
 
 <br/>Thank you!
 
-</p></article></slide>
+</p><p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
