--- a/A03 Visualization/A03_04_lattice.html
+++ b/A03 Visualization/A03_04_lattice.html
@@ -358,7 +358,8 @@ cloud(Ozone ~ Wind * Temp, data=airquality, panel.3d.cloud=panel.3dbars)</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
