--- a/A03 Visualization/A03_06_map.html
+++ b/A03 Visualization/A03_06_map.html
@@ -787,7 +787,9 @@ ggplot() + geom_polygon(aes(long, lat, group=id), data=wmap, fill=&#39;gray&#39;
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+	
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
