--- a/A03 Visualization/A03_07_interactive.html
+++ b/A03 Visualization/A03_07_interactive.html
@@ -1034,7 +1034,9 @@ callbacks.shift()();
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
