--- a/A04 Basic Analysis/A04_01_descriptive.html
+++ b/A04 Basic Analysis/A04_01_descriptive.html
@@ -571,7 +571,9 @@ gear vs
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
