--- a/A04 Basic Analysis/A04_03_qualitative.html
+++ b/A04 Basic Analysis/A04_03_qualitative.html
@@ -754,7 +754,9 @@ $OR.summary
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
