--- a/A04 Basic Analysis/A04_05_exploratory2.html
+++ b/A04 Basic Analysis/A04_05_exploratory2.html
@@ -573,7 +573,9 @@ plot(dend, axes=FALSE)</pre>
 
 <br/>Thank you!
 
-</p></article></slide>
+</p>
+
+<p><br><br> <a href='http://madlogos.github.io/R_Tutorial' title=''>返回目录</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
